add instruction in index.html, change tiles a bit

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -18,6 +18,7 @@
         #############################
         </pre>
         <div id="inventory"></div>
+        <p>Move using arrows, shot with shift + arrows, change level with PageUp / PageDown</p>
     </div>
   </body>
 </html>
