--- a/wasm/index.html
+++ b/wasm/index.html
@@ -1,30 +1,50 @@
 <html>
-  <head>
-    <meta charset="UTF-8" />
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@600&display=swap" rel="stylesheet">
   <script type="module">
-    import init from './target/bevy-robbo.js'
+    import init from './target/bevy-robbo-v3.js'
     init()
-    setInterval(function(){
+    setInterval(function () {
       document.querySelector("canvas").focus()
     }, 100);
   </script>
   <style>
-    pre {margin: 0px;}
+    * {
+      font-family: 'Source Code Pro', monospace;
+    }
+    #board {
+      font-size: 2em;
+      margin: 0px;
+      line-height: 120%;
+    }
+    #inventory {
+      font-size: 1.5em;
+      margin: 1em;
+    }
+
+    :focus {
+      outline: none;
+    }
   </style>
   <body>
-    <div style="font-size: 200%; position: absolute">
+    <div style="position: absolute">
       <pre id="board">
-        #############################
-        #                           #
-        #                           #
-        #        Loading...         #
-        #                           #
-        #                           #
-        #############################
-        </pre>
-        <div id="inventory"></div>
-        <p>Move using arrows, shot with shift + arrows, change level with PageUp / PageDown</p>
+          #############################
+          #                           #
+          #                           #
+          #        Loading...         #
+          #                           #
+          #                           #
+          #############################
+          </pre>
+      <div id="inventory"></div>
+      <p>
+        Arrows: move<br />
+        Shift + Arrow: shot<br />
+        PageUp / PageDown: change level<br />
+        Esc: kill Robbo</p>
     </div>
   </body>
 </html>
