--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@600&display=swap" rel="stylesheet">
   <script type="module">
-    import init from './wasm/target/bevy-robbo.js'
+    import init from './assets/wasm/target/bevy-robbo.js'
     init()
   </script>
   <style>
