--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <style>
     * {
       font-family: 'Source Code Pro', monospace;
+      color: #777;
     }
     #board {
       font-size: 2em;
