update to bevy 3.0

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         Shift + Arrow: shot<br />
         PageUp / PageDown: change level<br />
         Esc: kill Robbo</p>
+        <a href="#" onclick="var c = document.getElementById('bevy-canvas'); let x = (c.webkitRequestFullScreen || c.requestFullscreen); x.call(c);">fullscreen</a>
     </div>
   </body>
 </html>
