use cargo-make to build

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta charset="UTF-8" />
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@600&display=swap" rel="stylesheet">
   <script type="module">
-    import init from './assets/wasm/target/bevy-robbo.js'
+    import init from './target/wasm.js'
     init()
     function auto_focus() {
       let canvas = document.getElementsByTagName("canvas");
