update bevy rev

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -11,7 +11,8 @@
     gtag('config', 'UA-179077851-1');
   </script>
   <meta charset="UTF-8" />
-  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
   <script type="module">
     import init from './target/bevy-robbo-v3.js'
     init()
